logs/schematizer.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/schematizer'...
Compiling './lib/python3.5/site-packages/schematizer/exceptions.py'...
***   File "./lib/python3.5/site-packages/schematizer/exceptions.py", line 19
    f'{self.__class__.__name__}'
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/schematizer/nodes'...
Compiling './lib/python3.5/site-packages/schematizer/nodes/simple.py'...
***   File "./lib/python3.5/site-packages/schematizer/nodes/simple.py", line 27
    extra = {'message': f'invalid boolean: {obj!r}'}
                                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/schematizer-0.7.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
